Create a playground to interact with OpenAI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ azureml-mlflow = "^1.55.0"
 pytest = "^8.0.2"
 langchain = "^0.1.10"
 langchain-openai = "^0.0.8"
+jupyter = "^1.0.0"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
