A simple FastAPI setup to test

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Thomas Anderson <thomas@heythomasj.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.11"
 ipykernel = "^6.29.3"
 openai = "^1.13.3"
 azure-ai-resources = "^1.0.0b7"
@@ -18,6 +18,8 @@ langchain = "^0.1.10"
 langchain-openai = "^0.0.8"
 jupyter = "^1.0.0"
 python-dotenv = "^1.0.1"
+fastapi = "^0.110.0"
+uvicorn = "^0.27.1"
 
 
 [build-system]
